html & css header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <img src="Images/logo_long.png" alt="logo" id="logo">
+        <ul id="nav_ul">
+            <li class="nav_li">Acceuil</li>
+            <li class="nav_li">Contact</li>
+        </ul>
+    </header>    
 </body>
 </html>
