--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             <li class="nav_li">Acceuil</li>
             <li class="nav_li">Contact</li>
         </ul>
-    </header>    
+    </header>
+    <div id="banniere_img">
+        <div id="banniere_logo"> <img src="Images/logo_long.png" alt="logo">
+        <h1>Agence de graphisme</h1>
+        </div>
+    </div>
 </body>
 </html>
