--- a/index.html
+++ b/index.html
@@ -15,10 +15,40 @@
             <li class="nav_li">Contact</li>
         </ul>
     </header>
-    <div id="banniere_img">
-        <div id="banniere_logo"> <img src="Images/logo_long.png" alt="logo">
-        <h1>Agence de graphisme</h1>
+    <div id="page">
+        <div id="banniere_img">
+            <div id="banniere_logo"> <img src="Images/logo_long.png" alt="logo">
+            <h1>Agence de graphisme</h1>
+            </div>
         </div>
+        <section id="presentation">
+            <div id="intro">
+                <p>Mon petit graphisme est une agence de graphisme qui aide les entreprises à créer des visuels attractifs.</p>
+            </div>
+            <section id="skill">
+                <article>
+                    <img src="Images/graphic-design.png" alt="graphisme">
+                    <h2>Graphisme</h2>
+                    <p>Que vous ayez besoin de graphisme pour un site web, des cartes de visite ou des affiches, nous réalisons des visuels dont vous serez fiers.</p>
+                </article>
+                <article>
+                    <img src="Images/strategie.png" alt="strategie">
+                    <h2>Stratégie</h2>
+                    <p>Plutôt que de suggérer des graphismes à la mode, nous prenons le temps de comprendre vos objectifs et nous nous adaptons à vos besoins.</p>
+                </article>
+                <article>
+                    <img src="Images/illustrations.png" alt="illustration">
+                    <h2>Illustrations</h2>
+                    <p>Nos graphistes vous proposerons des illustrations 100% originales.</p>
+                </article>
+            </section>
+            <section id="temoignage">
+                <article>
+                    <p>"Mon petit graphisme est une excellente agence de graphisme. Les graphistes sont à l’écoute des besoins et m’ont permis de renouveler complètement la carte de mon restaurant."</p>
+                    <p>Amandine, restauratrice</p>
+                </article>
+            </section>
+        </section>
     </div>
 </body>
 </html>
