--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mon petit graphisme</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/20bd76b430.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -50,5 +51,36 @@
             </section>
         </section>
     </div>
+    <footer>
+        <div id="copyright">
+            <h2>Mon petit graphisme - Agence de graphisme basée à Paris</h2>
+        </div>
+        <div id="reseaux_sociaux">
+            <i class="fab fa-twitter fa-2x"></i>
+            <i class="fab fa-facebook-f fa-2x"></i>
+            <i class="fab fa-instagram fa-2x"></i>
+       </div>
+       <div id="footer">
+            <div class="colonne">
+                <h3>Accès rapides</h3>
+                <ul>
+                    <li>Acceuil</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+            <div class="colonne">
+                <h3>A propos</h3>
+                <ul>
+                    <li>Données personnelles</li>
+                    <li>Mentions légales</li>
+                    <li>Cookies</li>
+                </ul>
+            </div>
+            <div class="colonne">
+                <h3>Coordonnées</h3>
+                <p>10 Quai de la Charente<br>75019 Paris<br>01 23 45 67 89</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
